fixed overlapping title

--- a/styles/isotope.css
+++ b/styles/isotope.css
@@ -269,10 +269,6 @@ body {
     height: 420px;
   }
 
-  .element-item2 {
-    margin-left: 7%;
-  }
-
   /* center div last option */
   .title2 {
     left: 50%;
