--- a/styles/leftContainer.css
+++ b/styles/leftContainer.css
@@ -9,6 +9,9 @@
   flex-wrap: wrap;
 }
 
+.LCTopMargin {
+  margin-top: 100px;
+}
 
 @media only screen and (max-width: 600px) {
  .leftContainer {
